# helios

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.rst  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  container.yaml
app/: __init__.py  exceptions.py  formatters.py  helios.py  main.py
app/skyfield/: __init__.py
app/templates/: day_information.html
requirements/: dev.txt  mypy-extras.txt  prod.txt  test.txt
src/helios/: __init__.py  exceptions.py  formatters.py  helios.py  helpers.py  main.py  models.py  solar_calculator.py
src/helios/data/templates/: day_information.html
src/helios/templates/: day_information.html
tests/: __init__.py  test_formatters.py  test_helios.py  test_helpers.py  test_main.py  test_solar_calculator.py
