[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "helios"
authors = [
    {name = "Michael Reuter", email = "mareuternh@gmail.com"}
]
description = "Web service for Sun sky transitions."
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "jinja2",
    "skyfield",
    "uvicorn[standard]==0.27.1",
    "tzdata==2024.1",
    "pytz"
]

[project.urls]
Repository = "https://github.com/mareuter/helios"

[project.optional-dependencies]
dev = [
    "helios[lint,test]",
    "tox==4.13.0"
]
test = [
    "coverage[toml]==7.4.3",
    "httpx==0.27.0",
    "pytest==8.0.2"
]
lint = [
    "pre-commit==3.6.2"
]

[tool.setuptools_scm]
