[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "helios"
authors = [
    {name = "Michael Reuter", email = "mareuternh@gmail.com"}
]
description = "Web service for Sun sky transitions."
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.112.2",
    "jinja2==3.1.4",
    "skyfield==1.49",
    "uvicorn[standard]==0.30.6",
    "tzdata==2024.1"
]

[project.urls]
Repository = "https://github.com/mareuter/helios"

[project.optional-dependencies]
dev = [
    "helios[lint,test]",
    "tox==4.18.0"
]
test = [
    "coverage[toml]==7.6.1",
    "httpx==0.27.2",
    "pytest==8.3.2"
]
lint = [
    "pre-commit==3.8.0"
]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "docs/**",
]
ignore = [
    "D104"
]
line-length = 110
select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
    "W"
]

[tool.ruff.per-file-ignores]
"src/lct_web/__init__.py" = [
    "E402",
    "F401",
    "F403"
]
"tests/**" = [
    "D101",
    "D102",
    "D103",
]

[tool.ruff.isort]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
ignore_missing_imports = true
