[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "helios"
authors = [
    {name = "Michael Reuter", email = "mareuternh@gmail.com"}
]
description = "Web service for Sun sky transitions."
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.120.4",
    "jinja2==3.1.6",
    "skyfield==1.53",
    "uvicorn[standard]==0.38.0"
]

[project.urls]
Repository = "https://github.com/mareuter/helios"

[project.optional-dependencies]
dev = [
    "helios[lint,test]",
    "tox==4.32.0"
]
test = [
    "coverage[toml]==7.12.0",
    "httpx==0.28.1",
    "pytest==8.4.2"
]
lint = [
    "pre-commit==4.3.0"
]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "docs/**",
]
lint.ignore = [
    "D104"
]
line-length = 110
lint.select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
    "W"
]

[tool.ruff.lint.per-file-ignores]
"src/helios/__init__.py" = [
    "E402",
    "F401",
    "F403"
]
"tests/**" = [
    "D101",
    "D102",
    "D103",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
ignore_missing_imports = true
